--- a/tasks/misc.yml
+++ b/tasks/misc.yml
@@ -59,12 +59,10 @@
           - docker-selinux
           - docker-engine-selinux
           - docker-engine
-
-    - name: Install preparatory packages
+          - dnf-plugins-core
+        state: present
       become: true
       become_method: sudo
-      ansible.builtin.dnf5:
-        - dnf-plugins-core
 
     - name: Install new repo
       ansible.builtin.shell: "dnf-3 config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo"
