--- a/tasks/things_to_do_after_installing_fedora.yml
+++ b/tasks/things_to_do_after_installing_fedora.yml
@@ -20,51 +20,51 @@
   become: true
   become_method: sudo
   block:
-  - name: Enable the RPM Fusion repository
-    ansible.builtin.dnf5:
-      name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version }}.noarch.rpm"
-      state: present
-      update_cache: true
+#  - name: Enable the RPM Fusion repository
+#    ansible.builtin.dnf:
+#      name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version }}.noarch.rpm"
+#      state: present
+#      update_cache: true
 
-  - name: Activate rpm-fusion-non-free
-    ansible.builtin.dnf5:
-      name: https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version }}.noarch.rpm
-      state: present
-      update_cache: true
+#  - name: Activate rpm-fusion-non-free
+#    ansible.builtin.dnf:
+#      name: https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version }}.noarch.rpm
+#      state: present
+#      update_cache: true
 
   - name: Install codec plugins
-    ansible.builtin.dnf5:
+    ansible.builtin.dnf:
       name:
-        - gstreamer1-plugins-bad{bad-\*,good-\*,base} 
+        - gstreamer1-plugins-bad-\*
+        - gstreamer1-plugins-good-\*
+        - gstreamer1-plugins-base 
         - gstreamer1-plugin-openh264
         - gstreamer1-libav 
       state: present
   
   - name: Remove gstreamer1-plugins-bad-free-devel
-    ansible.builtin.dnf5:
+    ansible.builtin.dnf:
       name: gstreamer1-plugins-bad-free-devel
       state: absent
   
   - name: Install lame\*
-    ansible.builtin.dnf5:
+    ansible.builtin.dnf:
       name: lame\*
       state: present
   
   - name: Remove lame-devel
-    ansible.builtin.dnf5:
+    ansible.builtin.dnf:
       name: lame-devel
       state: absent
-    
-  - name: Install Multimedia
-    ansible.builtin.dnf5:
-      name: ''
-
+# - name: Insall multimedia Group
 - name: Set new hostname
   ansible.builtin.hostname:
     name: '{{ hostname }}'
+  become: true
+  become_method: sudo
 
 - name: Install gnome-tweaks
-  ansible.builtin.dnf5:
+  ansible.builtin.dnf:
     name:
     - gnome-tweaks
     - gnome-extensions-app
