--- a/tasks/borg_backup.yml
+++ b/tasks/borg_backup.yml
@@ -1,5 +1,5 @@
 - name: Check if borg is installed
-  ansible.builtin.dnf5:
+  ansible.builtin.dnf:
     name: 
       - borgbackup
       - borgmatic
